--- a/static/styles.css
+++ b/static/styles.css
@@ -35,6 +35,94 @@
     font-size: 2rem;
   }
 
+  .rating {
+    border: none;
+    float: left;
+  }
+  
+  .rating > input { display: none; }
+  .rating > label:before {
+    margin: 5px;
+    font-size: 1.25em;
+    font-family: FontAwesome;
+    display: inline-block;
+    content: "\f005";
+  }
+  
+  .rating > .half:before {
+    content: "\f089";
+    position: absolute;
+  }
+  
+  .rating > label {
+    color: #ddd;
+   float: right;
+  }
+  .formularioResenia{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+  
+
+  /****** Style Star Rating Widget *****/
+  
+  .rating {
+    border: none;
+    float: left;
+  }
+  
+  .rating > input { display: none; }
+  .rating > label:before {
+    margin: 5px;
+    font-size: 1.25em;
+    font-family: FontAwesome;
+    display: inline-block;
+    content: "\f005";
+  }
+  
+  .rating > .half:before {
+    content: "\f089";
+    position: absolute;
+  }
+  
+  .rating > label {
+    color: #ddd;
+   float: right;
+  }
+
+  #review_button{
+    background-color: #555555;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius:10px;
+    margin-right:15px;
+  }
+  
+  #review_button:hover {
+    background-color: #a7d3ff;
+    color: white;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+
+  
+.rating > input:checked ~ label, /* show gold star when clicked */
+.rating:not(:checked) > label:hover, /* hover current star */
+.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+
+.rating > input:checked + label:hover, /* hover current star when changing rating */
+.rating > input:checked ~ label:hover,
+.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
 @media (max-width: 992px){
   .navbar .navbar-nav {
       float: none;
