--- a/templates/infoLibro.html
+++ b/templates/infoLibro.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
+{% block Usuario%}{{nombre}}{% endblock %}
+{% block titulo %}reseñas{% endblock %}
 {%block heading%}
 
 <h1></h1>
@@ -35,11 +37,11 @@
         </div>
         <div class="d-flex justify-content-between" style="margin: 0 10%;">
           <h4> Nº de reseñas:</h4>
-          <h5>{{GoodRd_work_ratings_count}}</h5>
+          <h5>{{contadorPuntos}}</h5>
         </div>
         <div class="d-flex justify-content-between" style="margin: 0 10%;">
           <h4>Puntuacion:</h4>
-          <h5>{{GoodRd_average_rating}}</h5>
+          <h5>{{promedioResenia}}</h5>
         </div>
         
     </div>
