--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
          <input style="width:300px;" class="form-control" name="password" placeholder="Contraseña" type="password">
      </div>
      <br>
-     <button id="login_button" type="submit">Iniciar Sesion</button>
+     <button id="review_button" type="submit">Iniciar Sesion</button>
  </form>
 </center>
 
