--- a/templates/register.html
+++ b/templates/register.html
@@ -32,7 +32,7 @@
         <input style="width:300px;" class="form-control" name="confirm_password" placeholder="Confirmar Contraseña" type="password">
     </div>
     <br>
-     <button id="login_button" type="submit">Registrarse</button>
+     <button id="review_button" type="submit">Registrarse</button>
  </form>
 </center>
 
