--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,9 +31,9 @@
             <li class="nav-item active">
               <a class="nav-link nav__link" href="/home">Inicio</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link nav__link" href="/search">Buscar un libro</a>
-            </li>
+            </li> -->
             <li class="nav-item active">
               <a class="nav-link nav__link" href="/logout">Salir</a>
             </li>
